[gd_scene load_steps=7 format=2]

[ext_resource path="res://sources/themes/font-sizes/rbk-r-18.tres" type="DynamicFont" id=1]
[ext_resource path="res://sources/themes/light_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/components/apps/settings-app.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("win:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("win:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("win:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("win:rect_pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 300, 200 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("win:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.98, 0.98 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("win:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("win:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("win:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("win:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("win:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="settings-app" type="Control"]
anchor_right = 0.585938
anchor_bottom = 0.666667
rect_pivot_offset = Vector2( 300, 200 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="win" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 300, 200 )
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="win"]
margin_right = 600.0
margin_bottom = 400.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="win/margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 595.0
margin_bottom = 395.0

[node name="info" type="HBoxContainer" parent="win/margin/vbox"]
margin_right = 590.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="info" type="Label" parent="win/margin/vbox/info"]
margin_right = 536.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
text = "Настройки"
valign = 1

[node name="btn" type="HBoxContainer" parent="win/margin/vbox/info"]
margin_left = 540.0
margin_right = 590.0
margin_bottom = 32.0
alignment = 2

[node name="close" type="Button" parent="win/margin/vbox/info/btn"]
margin_right = 50.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 1 )
text = "X"

[node name="hb" type="HBoxContainer" parent="win/margin/vbox"]
margin_top = 36.0
margin_right = 590.0
margin_bottom = 390.0
size_flags_vertical = 3
alignment = 1

[node name="hs" type="HSplitContainer" parent="win/margin/vbox/hb"]
margin_right = 590.0
margin_bottom = 354.0
size_flags_horizontal = 3
split_offset = -100
dragger_visibility = 1

[node name="tabs" type="ScrollContainer" parent="win/margin/vbox/hb/hs"]
margin_right = 189.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="margin" type="MarginContainer" parent="win/margin/vbox/hb/hs/tabs"]
margin_left = 5.0
margin_top = 5.0
margin_right = 184.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vb" type="VBoxContainer" parent="win/margin/vbox/hb/hs/tabs/margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 174.0
margin_bottom = 339.0

[node name="items" type="VBoxContainer" parent="win/margin/vbox/hb/hs/tabs/margin/vb"]
margin_right = 169.0
margin_bottom = 25.0

[node name="desktop" type="PanelContainer" parent="win/margin/vbox/hb/hs/tabs/margin/vb/items"]
margin_right = 169.0
margin_bottom = 25.0

[node name="desk-btn" type="Button" parent="win/margin/vbox/hb/hs/tabs/margin/vb/items/desktop"]
margin_right = 169.0
margin_bottom = 25.0
toggle_mode = true
text = "Рабочий стол"

[node name="tab-win" type="ScrollContainer" parent="win/margin/vbox/hb/hs"]
margin_left = 201.0
margin_right = 590.0
margin_bottom = 354.0
size_flags_horizontal = 3
follow_focus = true

[node name="margin" type="MarginContainer" parent="win/margin/vbox/hb/hs/tab-win"]
margin_left = 5.0
margin_top = 5.0
margin_right = 384.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 3 )
anims/show = SubResource( 2 )

[connection signal="mouse_entered" from="win/margin/vbox/info" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="win/margin/vbox/info" to="." method="_on_info_mouse_exited"]
[connection signal="pressed" from="win/margin/vbox/info/btn/close" to="." method="_on_close_pressed"]
[connection signal="toggled" from="win/margin/vbox/hb/hs/tabs/margin/vb/items/desktop/desk-btn" to="." method="_on_deskbtn_toggled"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
